PhoneVersion/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

body {
    padding: 0px;
    margin: 0px;
    width: 375px;
    height: 744px;
    background-image: url("images/background.png");
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-position: center;
    font-family: "Roboto", sans-serif;
    font-weight: 400;
    font-style: normal;
    color: #ffff;
}


#top-bar-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    height: 60px;
    width: 350px;
}

#logo-container {
    height: 30px;
    margin: 0px;
}

#logo {
    width: 39px;
    height: 23px;
    padding-left: 15px;
}

#search-container {
    display: flex;
    align-items: center;
    justify-content:space-between;
    width: 120px;
    height: 18px;
    border-bottom: 1px solid white;
}

#search-text {
    font-size: 12px;
    margin: 0px;
    opacity: 0.7;
}

#search-icon {
    width: 12px;
    height: 11px;
}

#info-container {
    display:flex;
    align-items: end;
    height: 145px;
    margin-left: 15px;
}

#temp {
    height: 70px;
    margin: 0px;
    font-size: 64px;
}

#place-date-container {
    display: flex;
    align-items: end;
    flex-wrap: wrap;
    width: 120px;
    height: 60px;
}

#place {
    height: 30px;
    margin: 0px;
    font-size: 30px;
}

#date {
    height: 15px;
    margin: 0px;
    font-size: 10px;
}

#cloud-container {
    height: 45px;
    margin: 0px;
}

#cloud-icon {
    width: 40px;
    height: 40px;
}

#top-border {
    border-top: 5px solid #838282;
    opacity: 85%;
}


.bottom-container {
    position: absolute;
    display: flex;
    flex-direction: column;
    height: 490px;
    left: 0%;
    bottom: 0%;
    right: 0%;
    backdrop-filter: blur(5px);
}

.details {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0px;
    padding-top: 10px;
    height: 100px;
}

#content-container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 285px;
    height: 270px;
    margin-left: 45px;
}

#heading-container {
    display: flex;
    align-items: start;
    justify-content: center;
    height: 30px;
}

#heading {
    display: flex;
    justify-content: center;
    font-size: 14px;
}

.row {
    display: flex;
    width: 100%;
    height: 20px;
    align-items: center;
    justify-content: space-between;
}

.variable {
    font-size: 14px;
    opacity: 0.7;
}

.value {
    width: 22px;
    height: 12px;
    padding-left: 130px;
}

.temperature-icon {
    width: 11px;
    height: 22px;
}

#waterdrop {
    width: 17px;
    height: 20px;
}

#cloudy {
    width: 17px;
    height: 17px;
}

#windy {
    width: 16px;
    height: 15px;
}

#bottom-border {
    width: 290px;
    height: 80px;
    margin-left: 45px;
    border-bottom: 1px solid #ffff;
}

